# Awale

./: CMakeLists.txt  README.txt  client  client.c  server  server_chat.c
lib/: CMakeLists.txt
lib/CsvParser/: CMakeLists.txt
lib/cJSON/: CMakeLists.txt  cJSON.c  cJSON.h
lib/libcsv/src/: CMakeLists.txt
src/: CMakeLists.txt  jeu.c  jeu.h  joueur.c  joueur.h  partie.c  partie.h  plateau.c  plateau.h  regles.c  regles.cpp  regles.h  utils.c  utils.h
src/Client/: CMakeLists.txt  Makefile  actionManager.c  actionManager.h  client  client2.c  client2.h
src/Server/: CMakeLists.txt  Makefile  actionManager.c  actionManager.h  client2.h  csvWriter.c  csvWriter.h  csvparser.c  csvparser.h  server  server2.c  server2.h
src/Server/data/: users.csv  users.txt
